css/style.css
/* The page is NOT responsive. You can implement responsiveness yourself if you wanna have some fun 😃 */

:root {
    --color-primary: #fc9721;
    --color-secondary: #ffcb03;
    --color-tertiary: #ff585f;
    --color-primary-darker: #4bbb7d;
    --color-secondary-darker: #ffbb00;
    --color-tertiary-darker: #fd424b;
    --color-primary-opacity: #5ec5763a;
    --color-secondary-opacity: #ffcd0331;
    --color-tertiary-opacity: #ff58602d;
    --gradient-primary: linear-gradient(to top left, #39b385, #9be15d);
    --gradient-secondary: linear-gradient(to top left, #ffb003, #ffcb03);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: inherit;
}

html {
    font-size: 62.5%;
    box-sizing: border-box;
}

body {
    font-family: 'Poppins', sans-serif;
    font-weight: 300;
    color: #444;
    line-height: 1.9;
    background-color: #022539;
}

/* GENERAL ELEMENTS */
.section {
    padding: 18rem 3rem;
    /*border-top: 1px solid #022539;*/

    transition: transform 1s, opacity 1s;
    overflow-y: scroll;
}

.sectionProducts {
    padding: 20rem 3rem;
    /*border-top: 1px solid #022539;*/
    background: linear-gradient(  #022539, #0f3b56,  #46b7a1);

    transition: transform 1s, opacity 1s;
    overflow-y: scroll;
}

.sectionAbout {
    padding: 22rem 3rem;
    /*border-top: 1px solid #022539;*/
    background: linear-gradient( #46b7a1, #6e5f98);

    transition: transform 1s, opacity 1s;
    overflow-y: scroll;
}

.sectionLocations {
    padding: 22rem 3rem;
    /*border-top: 1px solid #022539;*/
    background: linear-gradient(#6e5f98, #6e5f98, #b78f46);

    transition: transform 1s, opacity 1s;
    overflow-y: scroll;
}

.section--hidden {
    opacity: 0;
    transform: translateY(8rem);
}

.section__title {
    max-width: 100rem;
    margin: 0 auto 8rem auto;
}

.section__description {
    font-size: 5.8rem;
    font-weight: 600;
    text-transform: uppercase;
    color: var(--color-primary);
    margin-bottom: 1rem;
    text-align: center;
}

.section__header {
    font-size: 4rem;
    line-height: 1.3;
    font-weight: 500;
    color: #f1deba;
}

.section__header__Footer {
    font-size: 2rem;
    line-height: 1.3;
    font-weight: 500;
    color: #f1c8c7;
    text-align: center;
    padding-bottom: 50px;
}

.btn {
    display: inline-block;
    background-color:#022539;
    font-size: 1.6rem;
    font-family: inherit;
    font-weight: 500;
    border: none;
    padding: 1.25rem 1.5rem;
    border-radius: 10rem;
    cursor: pointer;
    transition: all 0.3s;
}

.btnK {
    display: inline-block;
    background-color: #ebf506;
    font-size: 1.6rem;
    font-family: inherit;
    font-weight: 500;
    border: none;
    margin-top: 120px;
    padding: 2.3rem 1.5rem;
    border-radius: 10rem;
    cursor: pointer;
    transition: all 0.3s;
    align-content: center;
    margin-left: 35rem;
}

.btnL {
    display: inline-block;
    background-color: #cc7d7d;
    font-size: 1.6rem;
    font-family: inherit;
    font-weight: 500;
    border: none;
    margin-top: 120px;
    padding: 2.3rem 1.5rem;
    border-radius: 10rem;
    cursor: pointer;
    transition: all 0.3s;
    align-content: center;
    margin-left: 35rem;
}

.btn:hover {
    /*background-color: #FB991C;*/
}

.btn--text {
    display: inline-block;
    background: none;
    font-size: 1.7rem;
    font-family: inherit;
    font-weight: 500;
    color: var(--color-primary);
    border: none;
    border-bottom: 1px solid currentColor;
    padding-bottom: 2px;
    cursor: pointer;
    transition: all 0.3s;
}

p {
    color: #666;
}

/* This is BAD for accessibility! Don't do in the real world! */
button:focus {
    outline: none;
}

img {
    transition: filter 0.5s;
}

.lazy-img {
    filter: blur(20px);
}

/* NAVIGATION */
.nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 9rem;
    width: 100%;
    padding: 0 6rem;
    z-index: 100;
}

/* nav and stickly class at the same time */
.nav.sticky {
    position: fixed;
    background-color: rgba(255, 255, 255, 0.95);
}

.nav__logo {
    height: 4.5rem;
    transition: all 0.3s;
}

.nav__links {
    display: flex;
    align-items: center;
    list-style: none;
}

.nav__item {
    margin-left: 4rem;
    color: #FB991C;
}



i {
    font-size: 18px;
    background-color: transparent;
    color: #FB991C;
}

.nav__link:link,
.nav__link:visited {
    font-size: 1.7rem;
    font-weight: 400;
    color: #FB991C;
    text-decoration: none;
    display: block;
    transition: all 0.3s;
}

.nav__link--btn:link,
.nav__link--btn:visited {
    padding: 0.8rem 2.5rem;
    border-radius: 3rem;
    background-color: #022539;
    color: #222;
}

.nav__link--btn:hover,
.nav__link--btn:active {
    color: #e1c223;
    background-color: #022539;
    color: #333;
}

/* HEADER */
.header {
    padding: 0 3rem;
    height: 200vh;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.header-login {
    padding: 0 3rem;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.header__title {
    flex: 1;

    max-width: 115rem;
    display: grid;
    grid-template-columns: 3fr 2fr;
    row-gap: 3rem;
    align-content: center;
    justify-content: center;

    align-items: start;
    justify-items: start;
}

h1 {
    font-size: 5.5rem;
    line-height: 1.35;
}

h4 {
    font-size: 2.4rem;
    font-weight: 500;
}

.header__img {
    width: 100%;
    /*grid-column: 1 / 2;
    grid-row: 1 / span 2;*/
    transform: translateY(5rem);
}

.card__img {
    object-fit: cover;
    transform: translateY(5rem);
}



.highlight {
    position: relative;
}

.highlight::after {
    display: block;
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: -1;
    opacity: 0.7;
    transform: scale(1.07, 1.05) skewX(-15deg);
    background-image: var(--gradient-primary);
}
/* ... */

